--- a/src/ui/_buttons.scss
+++ b/src/ui/_buttons.scss
@@ -1,179 +1,170 @@
 .btn {
-  display: inline-flex;
-  text-align: center;
-  color: $white;
+    display: inline-flex;
+    text-align: center;
+    color: $white;
 
-  &_primary {
-    padding: 1.4rem 2.8rem;
-    justify-content: center;
-    align-items: center;
-    background-color: $blue;
-    clip-path: polygon(
-      0 0,
-      92% 0,
-      100% 22%,
-      100% 80%,
-      100% 100%,
-      0 100%,
-      0% 80%,
-      0% 20%
-    );
-    transition: clip-path 0.3s ease;
-
-    @media (max-width: 48em) {
-      padding: 2.8rem 5.6rem;
-    }
-
-    .btn__txt {
-      line-height: 2.6rem;
-
-      @media (max-width: 48em) {
-        line-height: 4.2rem;
-      }
-    }
-
-    &:disabled {
-      color: #86919a;
-      background-color: $gray;
-      pointer-events: none;
-    }
-
-    &_white {
-      background-color: $white;
-
-      .btn__txt {
-        color: $blue;
-      }
-    }
-
-    @media (any-hover: hover) {
-      &:hover {
-        clip-path: polygon(
-          0 0,
-          100% 0,
-          100% 0,
-          100% 80%,
-          100% 100%,
-          0 100%,
-          0% 80%,
-          0% 20%
-        );
-      }
-    }
-  }
-
-  &_secondary {
-    position: relative;
-
-    &::after {
-      content: "";
-      position: absolute;
-      bottom: -0.3rem;
-      left: 0;
-      width: 100%;
-      height: 1px;
-      background-color: $white;
-      transition: transform 0.3s ease;
-      transform-origin: left;
-    }
-
-    .btn__txt {
-      line-height: 2.4rem;
-    }
-
-    @media (any-hover: hover) {
-      &:hover {
-        &::after {
-          transform: scaleX(0.05);
-        }
-      }
-    }
-
-    @media (max-width: 48em) {
-      .btn__txt {
-        line-height: 4.8rem;
-      }
-    }
-
-    &_blue {
-      color: $blue;
-
-      &::after {
+    &_primary {
+        position: relative;
+        padding: 1.4rem 2.8rem;
+        justify-content: center;
+        align-items: center;
         background-color: $blue;
-      }
+        clip-path: polygon(0 0, 92% 0, 100% 22%, 100% 80%, 100% 100%, 0 100%, 0% 80%, 0% 20%);
+        transition: clip-path 0.3s ease;
+
+        @media (max-width: 48em) {
+            padding: 2.8rem 5.6rem;
+
+            &::after {
+                width: 5.6rem;
+            }
+
+            &_fw {
+                clip-path: polygon(0 0, 96% 0, 100% 29%, 100% 80%, 100% 100%, 0 100%, 0% 80%, 0% 20%);
+            }
+        }
+
+        .btn__txt {
+            line-height: 2.6rem;
+
+            @media (max-width: 48em) {
+                line-height: 4.2rem;
+            }
+        }
+
+        &:disabled {
+            color: #86919a;
+            background-color: $gray;
+            pointer-events: none;
+        }
+
+        &_white {
+            background-color: $white;
+
+            .btn__txt {
+                color: $blue;
+            }
+        }
+
+        @media (any-hover: hover) {
+            &:hover {
+                clip-path: polygon(0 0, 100% 0, 100% 0, 100% 80%, 100% 100%, 0 100%, 0% 80%, 0% 20%);
+            }
+        }
     }
-  }
+
+    &_secondary {
+        position: relative;
+
+        &::after {
+            content: '';
+            position: absolute;
+            bottom: -0.3rem;
+            left: 0;
+            width: 100%;
+            height: 1px;
+            background-color: $white;
+            transition: transform 0.3s ease;
+            transform-origin: left;
+        }
+
+        .btn__txt {
+            line-height: 2.4rem;
+        }
+
+        @media (any-hover: hover) {
+            &:hover {
+                &::after {
+                    transform: scaleX(0.05);
+                }
+            }
+        }
+
+        @media (max-width: 48em) {
+            .btn__txt {
+                line-height: 4.8rem;
+            }
+        }
+
+        &_blue {
+            color: $blue;
+
+            &::after {
+                background-color: $blue;
+            }
+        }
+    }
 }
 
-.arrow-btn {
-  position: relative;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  flex: 0 0 4.2rem;
-  width: 4.2rem;
-  height: 4.2rem;
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  border-radius: 50%;
-
-  @media (max-width: 48em) {
-    flex: 0 0 10rem;
-    width: 10rem;
-    height: 10rem;
-  }
-
-  &::before,
-  &::after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    border: 1px solid $white;
+.i-btn {
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    flex: 0 0 4.2rem;
+    width: 4.2rem;
+    height: 4.2rem;
+    border: 1px solid rgba(255, 255, 255, 0.1);
     border-radius: 50%;
-    transform: translate(-50%, -50%);
-  }
-
-  &::before {
-    width: 3.8rem;
-    height: 3.8rem;
-    opacity: 0.4;
 
     @media (max-width: 48em) {
-      width: 9rem;
-      height: 9rem;
+        flex: 0 0 10rem;
+        width: 10rem;
+        height: 10rem;
     }
-  }
-
-  &::after {
-    width: 3.4rem;
-    height: 3.4rem;
-
-    @media (max-width: 48em) {
-      width: 8rem;
-      height: 8rem;
-    }
-  }
-
-  svg {
-    width: 1.5rem;
-    height: 1.5rem;
-
-    @media (max-width: 48em) {
-      width: 3.2rem;
-      height: 3.2rem;
-    }
-  }
-
-  &_blue {
-    border: 1px solid rgba(0, 71, 128, 0.1);
 
     &::before,
     &::after {
-      border: 1px solid $blue;
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        border: 1px solid $white;
+        border-radius: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    &::before {
+        width: 3.8rem;
+        height: 3.8rem;
+        opacity: 0.4;
+
+        @media (max-width: 48em) {
+            width: 9rem;
+            height: 9rem;
+        }
+    }
+
+    &::after {
+        width: 3.4rem;
+        height: 3.4rem;
+
+        @media (max-width: 48em) {
+            width: 8rem;
+            height: 8rem;
+        }
     }
 
     svg {
-      fill: $blue;
+        width: 1.5rem;
+        height: 1.5rem;
+
+        @media (max-width: 48em) {
+            width: 3.2rem;
+            height: 3.2rem;
+        }
     }
-  }
+
+    &_blue {
+        border: 1px solid rgba(0, 71, 128, 0.1);
+
+        &::before,
+        &::after {
+            border: 1px solid $blue;
+        }
+
+        svg {
+            fill: $blue;
+        }
+    }
 }
