add: hero section

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -43,12 +43,28 @@ main {
     flex: 1 1 auto;
 }
 
+// wrapper
 .wrapper {
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     height: 100%;
     max-width: 1920px;
+}
+
+// swiper fade fix
+.swiper-fade {
+    .swiper-slide {
+        opacity: 0 !important;
+        visibility: hidden !important;
+        transition:
+            opacity 0.8s ease,
+            visibility 0.8s ease;
+        &.swiper-slide-active {
+            opacity: 1 !important;
+            visibility: visible !important;
+        }
+    }
 }
 
 // --------------------------------------------------------------------------
