--- a/src/ui/ui.scss
+++ b/src/ui/ui.scss
@@ -1,14 +1,17 @@
 // typography
-@import "typo";
+@import 'typo';
 
 // buttons
-@import "buttons";
+@import 'buttons';
 
 // input
-@import "input";
+@import 'input';
 
 // breadcrumbs
-@import "breadcrumbs";
+@import 'breadcrumbs';
 
 // tabs
-@import "tabs";
+@import 'tabs';
+
+// swiper controls
+@import 'swiper-controls';
