--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,6 +1,30 @@
 @font-face {
-  font-family: "Bahnschrift";
-  src: url("../assets/fonts/Bahnschrift.woff2") format("woff2");
-  font-weight: 400;
-  font-style: normal;
+    font-family: 'Bahnschrift';
+    src: url('../assets/fonts/Bahnschrift.woff2') format('woff2');
+    font-weight: 400;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Framer Sans';
+    src: url('../assets/fonts/FramerSans-300.woff2') format('woff2');
+    font-weight: 300;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Framer Sans';
+    src: url('../assets/fonts/FramerSans-400.woff2') format('woff2');
+    font-weight: 400;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Framer Sans';
+    src: url('../assets/fonts/FramerSans-500.woff2') format('woff2');
+    font-weight: 500;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Framer Sans';
+    src: url('../assets/fonts/FramerSans-600.woff2') format('woff2');
+    font-weight: 600;
+    font-style: normal;
 }
