--- a/src/ui/_typo.scss
+++ b/src/ui/_typo.scss
@@ -1,5 +1,6 @@
 .h {
-    font-weight: 600;
+    font-family: 'Framer Sans';
+    font-weight: 500;
     line-height: 120%;
 
     &_h1 {
@@ -52,6 +53,7 @@
     line-height: 2.6rem;
 
     &_sb {
+        font-family: 'Framer Sans';
         font-weight: 600;
     }
 
