--- a/src/scss/sections/header.scss
+++ b/src/scss/sections/header.scss
@@ -48,11 +48,18 @@
     }
     &__nav {
         display: flex;
-        column-gap: 4.8rem;
+        column-gap: 5.5rem;
         color: $white;
     }
 
+    &__btn {
+        &.btn {
+            padding: 1.4rem 2.3rem;
+        }
+    }
+
     &__nav-link {
+        font-family: 'Framer Sans';
         font-size: 2.4rem;
         line-height: 2.9rem;
         font-weight: 300;
