--- a/src/ui/_swiper-controls.scss
+++ b/src/ui/_swiper-controls.scss
@@ -2,10 +2,14 @@
     display: inline-flex;
     align-items: center;
     column-gap: 1rem;
-    font-family: Bahnschrift;
     color: $white;
 
+    .h {
+        font-family: Bahnschrift;
+    }
+
     &__current {
+        transform: translateY(-0.4rem);
     }
 
     &__divider,
