--- a/src/scss/sections/_hero.scss
+++ b/src/scss/sections/_hero.scss
@@ -3,66 +3,126 @@
         position: relative;
     }
 
-    &__swiper-fraction {
-        position: absolute;
+    &__swiper-fraction,
+    &__swiper-navigation {
+        position: relative;
         z-index: 2;
-        left: 0;
-        bottom: 11rem;
+
+        @media (min-width: 48em) {
+            position: absolute;
+        }
+    }
+
+    &__swiper-fraction {
+        align-self: center;
+
+        @media (min-width: 48em) {
+            left: 0;
+            bottom: 11rem;
+            align-self: unset;
+        }
     }
 
     &__swiper-navigation {
-        position: absolute;
-        z-index: 2;
-        right: 0;
-        bottom: 18.6rem;
+        justify-self: end;
+
+        @media (min-width: 48em) {
+            right: 0;
+            bottom: 21.8rem;
+            justify-self: unset;
+        }
     }
 
     &__info {
-        position: absolute;
+        position: relative;
         z-index: 2;
-        right: -8rem;
-        bottom: -6.5rem;
-        min-width: 151.6rem;
+        transform: translateY(-50%);
+
+        @media (min-width: 48em) {
+            position: absolute;
+            right: -8rem;
+            bottom: -6.5rem;
+            min-width: 151.6rem;
+            transform: none;
+        }
+    }
+
+    &__carousel {
+        @media (max-width: 48em) {
+            padding-bottom: 24.4rem;
+            display: grid;
+            grid-template: auto 10rem / repeat(2, 1fr);
+            width: 100%;
+        }
     }
 
     &__swiper {
         &.swiper {
             overflow: visible;
         }
+
+        @media (max-width: 48em) {
+            grid-column: span 2;
+            width: 100%;
+        }
     }
 }
 
 .swiper-slide-hero {
     position: relative;
-    min-height: 90rem;
     color: $white;
 
-    &__body {
-        position: relative;
-        z-index: 2;
-        padding-top: 30.9rem;
-        display: flex;
-        justify-content: space-between;
-        column-gap: 32.5rem;
-        height: 100%;
+    @media (min-width: 48em) {
+        min-height: 90rem;
     }
 
-    &__heading-wrap {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
+    &__inner {
+        position: relative;
+        z-index: 2;
+        padding-top: 29.4rem;
+        padding-bottom: 14rem;
+        display: grid;
+        justify-items: start;
+        height: 100%;
+
+        @media (min-width: 48em) {
+            padding-top: 30.9rem;
+            padding-bottom: 0;
+            grid-template-columns: 86rem 1fr;
+            column-gap: 32.5rem;
+            row-gap: 4rem;
+        }
     }
 
     &__heading {
-        margin-bottom: 4rem;
-        max-width: 86rem;
+        margin-bottom: 2.4rem;
+        max-width: 75rem;
+
+        @media (min-width: 48em) {
+            margin-bottom: 0;
+            max-width: 86rem;
+        }
     }
 
     &__text {
-        padding-top: 0.8rem;
-        margin-right: auto;
-        max-width: 42.8rem;
-        line-height: 2.4rem;
+        margin-bottom: 4.8rem;
+        grid-row: 2/3;
+        max-width: 65rem;
+
+        @media (min-width: 48em) {
+            margin-bottom: 0;
+            padding-top: 0.8rem;
+            max-width: 42.8rem;
+            line-height: 2.4rem;
+            grid-row: 1 / 2;
+            grid-column: 2 / 3;
+        }
+    }
+
+    &__btn {
+        @media (max-width: 48em) {
+            grid-row: 1 / 2;
+        }
     }
 
     &__bg {
@@ -81,6 +141,16 @@
             height: 100%;
             background-color: rgba(19, 19, 19, 0.6);
         }
+
+        @media (max-width: 48em) {
+            left: -2.4rem;
+            height: calc(100% + 34.4rem);
+        }
+    }
+
+    &__bg-img {
+        height: 100%;
+        object-fit: cover;
     }
 }
 
@@ -89,24 +159,33 @@
     align-items: center;
     column-gap: 2.4rem;
 
-    &__progressbar {
-        position: relative;
-        flex: 0 0 44rem;
-        width: 44rem;
-        height: 0.2rem;
-        background-color: rgba(255, 255, 255, 0.4);
-        --progress: 0;
+    @media (max-width: 48em) {
+        column-gap: 0.8rem;
+    }
 
-        &::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: $white;
-            transform-origin: left;
-            transform: scaleX(var(--progress));
+    &__progressbar {
+        display: none;
+
+        @media (min-width: 48em) {
+            position: relative;
+            flex: 0 0 44rem;
+            display: block;
+            width: 44rem;
+            height: 0.2rem;
+            background-color: rgba(255, 255, 255, 0.4);
+            --progress: 0;
+
+            &::before {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-color: $white;
+                transform-origin: left;
+                transform: scaleX(var(--progress));
+            }
         }
     }
 }
@@ -129,6 +208,13 @@
         width: 66.2rem;
         height: 66.2rem;
         background: url('./assets/images/bg-figures/el-1.svg') center / contain no-repeat;
+
+        @media (max-width: 48em) {
+            top: 15.2rem;
+            left: 14.4rem;
+            width: 36rem;
+            height: 36rem;
+        }
     }
 
     &::after {
@@ -137,6 +223,12 @@
         width: 67.3rem;
         height: 67.3rem;
         background: url('./assets/images/bg-figures/el-2.svg') bottom / contain no-repeat;
+
+        @media (max-width: 48em) {
+            top: -18.4rem;
+            width: 35.8rem;
+            height: 35.8rem;
+        }
     }
 
     &__inner {
@@ -144,10 +236,22 @@
         z-index: 3;
         padding: 6rem 12rem;
         display: flex;
-        column-gap: 35.1rem;
+        gap: 35.1rem;
+
+        @media (max-width: 48em) {
+            padding: 4.8rem 3.2rem 3.2rem;
+            flex-direction: column;
+            gap: 1.2rem;
+        }
     }
 
     &__text {
-        max-width: 58.9rem;
+        &.txt24 {
+            font-size: 2.8rem;
+        }
+
+        @media (min-width: 48em) {
+            max-width: 58.9rem;
+        }
     }
 }
