--- a/src/scss/dev/vzmsk1.scss
+++ b/src/scss/dev/vzmsk1.scss
@@ -1,1 +1,4 @@
 @import '../sections/hero';
+@import '../sections/documentation';
+@import '../sections/question-form';
+@import '../sections/contacts-map';
