--- a/src/scss/sections/header.scss
+++ b/src/scss/sections/header.scss
@@ -53,8 +53,10 @@
     }
 
     &__btn {
-        &.btn {
-            padding: 1.4rem 2.3rem;
+        @media (min-width: 48em) {
+            &.btn {
+                padding: 1.4rem 2.3rem;
+            }
         }
     }
 
