add: catalog page (home)

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -2,7 +2,7 @@
     <div class="footer__container container">
         <div class="footer__body hf-grid">
             <a href="#" class="hf-grid__logo"
-                ><img class="hf-grid__logo-img" src="./assets/images/logo.svg" alt=""
+                ><img class="hf-grid__logo-img" src="./assets/images/logo-white.svg" alt=""
             /></a>
             <nav class="hf-grid__nav">
                 <a href="#" class="hf-grid__nav-link">Каталог</a>
