--- a/src/components/header.html
+++ b/src/components/header.html
@@ -11,9 +11,8 @@
             <a href="#" class="hf-grid__nav-link">Сервисный центр</a>
             <a href="#" class="hf-grid__nav-link">Контакты</a>
         </nav>
-	    
 
-        <button type="button" class="hf-grid__btn btn btn_primary btn_primary_white">
+        <button type="button" class="hf-grid__btn btn btn_primary">
             <span class="btn__txt txt22 txt22_sb">Оставить заявку</span>
         </button>
         <button type="button" class="header__hamburger-btn i-btn">
