--- a/src/scss/dev/vzmsk1.scss
+++ b/src/scss/dev/vzmsk1.scss
@@ -2,3 +2,4 @@
 @import '../sections/documentation';
 @import '../sections/question-form';
 @import '../sections/contacts-map';
+@import '../sections/catalog';
