--- a/src/scss/sections/_catalog.scss
+++ b/src/scss/sections/_catalog.scss
@@ -19,6 +19,7 @@
     &__heading-group {
         display: flex;
         flex-direction: column;
+        row-gap: 1.6rem;
 
         @media (min-width: 48em) {
             flex-direction: row;
@@ -26,21 +27,48 @@
             align-items: center;
         }
     }
+
+    &__items-counter {
+        display: flex;
+        align-items: center;
+        column-gap: 1rem;
+
+        @media (min-width: 48em) {
+            span {
+                display: none;
+            }
+        }
+    }
+
+    &__body {
+        display: flex;
+        flex-direction: column;
+        row-gap: 8rem;
+
+        @media (max-width: 48em) {
+            row-gap: 6.4rem;
+        }
+    }
+
     &__heading {
         display: flex;
         align-items: flex-start;
-        column-gap: 1rem;
+        gap: 1rem;
         color: $blue;
 
-        span {
-            font-size: 2.4rem;
+        .catalog__items-counter {
             line-height: 120%;
             color: #001b30;
+
+            @media (min-width: 48em) {
+                font-size: 2.4rem;
+            }
         }
 
         @media (max-width: 48em) {
             margin-bottom: 6.4rem;
-            column-gap: 1.6rem;
+            flex-wrap: wrap;
+            gap: 1.6rem;
 
             span {
                 font-size: 3.6rem;
@@ -56,7 +84,15 @@
         @media (min-width: 48em) {
             grid-template-columns: repeat(3, 1fr);
             gap: 1.6rem;
+
+            &_4 {
+                grid-template-columns: repeat(4, 1fr);
+            }
         }
+    }
+    &__load-more-btn {
+        margin: 0 auto;
+        justify-content: center;
     }
 }
 
@@ -65,20 +101,97 @@
     overflow: hidden;
     background-color: $gray;
 
-    @media (max-width: 48em) {
-        &:last-child {
-            .catalog-item-card__image-wrap {
-                transform: translateX(-12rem);
+    &_vertical {
+        &.catalog-item-card {
+            &::before {
+                top: -25rem;
             }
         }
-        &:nth-child(4) {
-            .catalog-item-card__image-wrap {
-                transform: translateX(-8rem);
+        .catalog-item-card {
+            &__inner {
+                padding: 2.4rem;
+                @media (min-width: 48em) {
+                    min-height: auto;
+                    height: 100%;
+                }
+            }
+            &__image-wrap {
+                position: static;
+                margin-bottom: 2.4rem;
+                height: 26.8rem;
+                width: auto;
+                transform: none;
+
+                img {
+                    width: auto;
+                    height: 100%;
+                    object-fit: contain;
+                }
+
+                @media (max-width: 48em) {
+                    margin-bottom: 3.2rem;
+                    height: 37rem;
+                }
+            }
+
+            &__text {
+                padding: 1.4rem 2.8rem;
+                flex: 1 1 auto;
+                background-color: $white;
+                clip-path: polygon(0 0, 94% 0, 100% 19%, 100% 80%, 100% 100%, 0 100%, 0% 80%, 0% 20%);
+
+                @media (max-width: 48em) {
+                    padding: 2.4rem;
+                    row-gap: 3.2rem;
+                }
+            }
+
+            &__heading {
+                flex: 1 1 auto;
+                max-width: 28.8rem;
+                font-size: 2.4rem;
+
+                @media (max-width: 48em) {
+                    font-size: 3.6rem;
+                    max-width: 56.8rem;
+                }
+            }
+
+            &__link {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                color: $blue;
+
+                svg {
+                    flex: 0 0 2rem;
+                    width: 2rem;
+
+                    @media (max-width: 48em) {
+                        flex: 0 0 4rem;
+                        width: 4rem;
+                    }
+                }
             }
         }
-        &:nth-child(5) {
-            .catalog-item-card__image-wrap {
-                transform: translateX(-10rem);
+    }
+
+    &:not(&_vertical) {
+        @media (max-width: 48em) {
+            &:last-child {
+                .catalog-item-card__image-wrap {
+                    transform: translateX(-12rem);
+                }
+            }
+            &:nth-child(4) {
+                .catalog-item-card__image-wrap {
+                    transform: translateX(-8rem);
+                }
+            }
+            &:nth-child(5) {
+                .catalog-item-card__image-wrap {
+                    transform: translateX(-10rem);
+                }
             }
         }
     }
