add: product page

--- a/src/scss/dev/vzmsk1.scss
+++ b/src/scss/dev/vzmsk1.scss
@@ -3,3 +3,4 @@
 @import '../sections/question-form';
 @import '../sections/contacts-map';
 @import '../sections/catalog';
+@import '../sections/product';
