--- a/src/scss/dev/vzmsk1.scss
+++ b/src/scss/dev/vzmsk1.scss
@@ -4,3 +4,6 @@
 @import '../sections/contacts-map';
 @import '../sections/catalog';
 @import '../sections/product';
+@import '../sections/about-us';
+@import '../sections/video';
+@import '../sections/collections';
