--- a/src/scss/dev/vzmsk1.scss
+++ b/src/scss/dev/vzmsk1.scss
@@ -7,3 +7,7 @@
 @import '../sections/about-us';
 @import '../sections/video';
 @import '../sections/collections';
+@import '../sections/configurator';
+@import '../sections/services';
+@import '../sections/banner';
+@import '../sections/service-center';
