--- a/src/components/header.html
+++ b/src/components/header.html
@@ -15,12 +15,44 @@
         <button type="button" class="hf-grid__btn btn btn_primary">
             <span class="btn__txt txt22 txt22_sb">Оставить заявку</span>
         </button>
-        <button type="button" class="header__hamburger-btn i-btn">
+        <button type="button" class="header__hamburger-btn hamburger i-btn">
             <svg width="22" height="14" viewBox="0 0 22 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M1 1H21" stroke="white" stroke-linecap="round" />
                 <path d="M1 7H21" stroke="white" stroke-linecap="round" />
                 <path d="M1 13H21" stroke="white" stroke-linecap="round" />
             </svg>
+        </button>
+    </div>
+    <div class="header-menu">
+        <div class="header-menu__head">
+            <a href="#" class="header-menu__logo"
+                ><img class="header-menu__logo-image" src="./assets/images/logo-white.svg" alt=""
+            /></a>
+            <button type="button" class="header__close-btn i-btn">
+                <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                >
+                    <path
+                        d="M6.64645 16.6464C6.45118 16.8417 6.45118 17.1583 6.64645 17.3536C6.84171 17.5488 7.15829 17.5488 7.35355 17.3536L6.64645 16.6464ZM12.3536 12.3536C12.5488 12.1583 12.5488 11.8417 12.3536 11.6464C12.1583 11.4512 11.8417 11.4512 11.6464 11.6464L12.3536 12.3536ZM11.6464 11.6464C11.4512 11.8417 11.4512 12.1583 11.6464 12.3536C11.8417 12.5488 12.1583 12.5488 12.3536 12.3536L11.6464 11.6464ZM17.3536 7.35355C17.5488 7.15829 17.5488 6.84171 17.3536 6.64645C17.1583 6.45118 16.8417 6.45118 16.6464 6.64645L17.3536 7.35355ZM12.3536 11.6464C12.1583 11.4512 11.8417 11.4512 11.6464 11.6464C11.4512 11.8417 11.4512 12.1583 11.6464 12.3536L12.3536 11.6464ZM16.6464 17.3536C16.8417 17.5488 17.1583 17.5488 17.3536 17.3536C17.5488 17.1583 17.5488 16.8417 17.3536 16.6464L16.6464 17.3536ZM11.6464 12.3536C11.8417 12.5488 12.1583 12.5488 12.3536 12.3536C12.5488 12.1583 12.5488 11.8417 12.3536 11.6464L11.6464 12.3536ZM7.35355 6.64645C7.15829 6.45118 6.84171 6.45118 6.64645 6.64645C6.45118 6.84171 6.45118 7.15829 6.64645 7.35355L7.35355 6.64645ZM7.35355 17.3536L12.3536 12.3536L11.6464 11.6464L6.64645 16.6464L7.35355 17.3536ZM12.3536 12.3536L17.3536 7.35355L16.6464 6.64645L11.6464 11.6464L12.3536 12.3536ZM11.6464 12.3536L16.6464 17.3536L17.3536 16.6464L12.3536 11.6464L11.6464 12.3536ZM12.3536 11.6464L7.35355 6.64645L6.64645 7.35355L11.6464 12.3536L12.3536 11.6464Z"
+                        fill="white"
+                    />
+                </svg>
+            </button>
+        </div>
+        <nav class="header-menu__nav">
+            <a href="#" class="header-menu__nav-link h h_h2">Каталог</a>
+            <a href="#" class="header-menu__nav-link h h_h2">Акции</a>
+            <a href="#" class="header-menu__nav-link h h_h2">Конфигуратор</a>
+            <a href="#" class="header-menu__nav-link h h_h2">Документация</a>
+            <a href="#" class="header-menu__nav-link h h_h2">Сервисный центр</a>
+            <a href="#" class="header-menu__nav-link h h_h2">Контакты</a>
+        </nav>
+        <button type="button" class="header-menu__btn btn btn_primary btn_primary_white">
+            <span class="btn__txt txt22 txt22_sb">Оставить заявку</span>
         </button>
     </div>
 </header>
