--- a/src/scss/sections/header.scss
+++ b/src/scss/sections/header.scss
@@ -102,3 +102,83 @@
         }
     }
 }
+
+.header-menu {
+    display: none;
+
+    @media (max-width: 48em) {
+        position: fixed;
+        top: 0;
+        left: 0;
+
+        padding: 4.8rem 2.4rem;
+
+        display: flex;
+        flex-direction: column;
+
+        width: 100vw;
+        height: 100%;
+
+        color: $white;
+
+        background-color: $blue;
+
+        opacity: 0;
+        visibility: hidden;
+        transform: translateX(120%);
+
+        transition:
+            transform 0.3s ease,
+            opacity 0.3s ease,
+            visibility 0.3s ease;
+
+        &::after {
+            content: '';
+
+            position: absolute;
+            z-index: 501;
+            bottom: -96rem;
+            right: -81rem;
+
+            width: 161rem;
+            height: 161rem;
+
+            background: url('./assets/images/bg-figures/el-5.svg') center / contain no-repeat;
+
+            overflow: auto;
+            transform: rotate(-74deg);
+        }
+
+        ._menu-opened & {
+            opacity: 1;
+            visibility: visible;
+            transform: translateX(0);
+        }
+
+        &__head {
+            margin-bottom: 5rem;
+
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        &__logo {
+            flex: 0 0 22rem;
+
+            width: 22rem;
+        }
+
+        &__nav {
+            margin-bottom: 6.4rem;
+
+            display: flex;
+            flex-direction: column;
+            row-gap: 6.4rem;
+        }
+
+        &__btn {
+            align-self: flex-start;
+        }
+    }
+}
